--- a/teste2/src/components/pages/Home/Home.css
+++ b/teste2/src/components/pages/Home/Home.css
@@ -1,4 +1,4 @@
-/* .container{
+.container{
     width: 100%;
     min-height: 100vh;
     display: flex;
@@ -35,4 +35,4 @@
 .btn-red{
     background-color: blueviolet;
     color: white;
-} */
+}
