--- a/teste2/src/components/Navbar/Navbar.css
+++ b/teste2/src/components/Navbar/Navbar.css
@@ -59,6 +59,10 @@
   transition: color 0.3s ease;
 }
 
+.nav-link:hover{
+  color: blueviolet;
+}
+
 .nav-link::after {
   content: '';
   position: absolute;
